--- a/style.css
+++ b/style.css
@@ -1,31 +1,32 @@
 html { 
-	margin:0; 
-	padding:0;
-	  box-sizing: border-box;
+margin:0; 
+padding:0;
+box-sizing: border-box;
 }
 *, *:before, *:after {
-  box-sizing: inherit;	
+box-sizing: inherit;
 }
 
 
 body {
-	font-family: 'Athiti', sans-serif;
-	font-size: 12pt;
+font-family: 'Athiti', sans-serif;
+font-size: 12pt;
+width: 100%;
 }
 
 #global {
-	width: 1200px;
-	margin: 0 auto;
+width: 80%;
+margin: 0 auto;
 }
 
 h1 {
-	font-size: 15pt;
+font-size: 15pt;
 }
 
 h2 {
-	color: blue;
-	font-size: 12pt;
-	margin: 0;
+color: blue;
+font-size: 12pt;
+margin: 0;
 }
 
 
@@ -33,122 +34,139 @@ h2 {
 /** page d'accueil **/
 
 header {
-	float: left;
-	width: 100%;
+width: 100%;
+float: left;
+padding-left: 5%;
 }
-
-ul {
-	width: 30%;
-	padding:0;
-	list-style-type:none;
-	position: relative;
-	float: right;	
- }
- 
-li {
- margin-left:2px;
- }
- 
-ul li a {
- display:block;
- width:100%;
- background-color:none;
- color:black;
- text-decoration:none;
- text-align:center;
- padding:5px;
- border:none;
- /*pour avoir un effet "outset" avec IE :*/
- }
- 
-ul li a:hover {
- background-color:blue;
-	 } 
 
 .nav {
-	width:1200px; 
-	margin:0 auto;
-	padding-top: 10%;
+width: 100%;
+margin:0 auto;
+height: 20%;
 }
 
-.contenuindex {
+
+ul {
 	width: 100%;
-	height: 1200px;
-	}
-	
+    list-style-type: none;
+    margin: 0;
+    position: fixed;
+    padding-top: 2%;  
+}
+
+li {
+    display: inline;
+    margin-right: 1%;
+margin-left: 1%;
+}
+
+li a:hover {
+color: blue;
+}
+
+
+.contenuindex {
+width: 100%;
+height: 2000px;
+background-color: pink;
+padding-top: 5%;
+}
+
 .opacite {
-	opacity: 1; filter: alpha(opacity=100);
+opacity: 1; filter: alpha(opacity=100);
 }
 
 .opacite:hover {
-	opacity: 0.7; filter: alpha(opacity=30);
+opacity: 0.7; filter: alpha(opacity=30);
 }
 
 #cartevoeux {
-	width: 30%;
-	display:block;
-	position:absolute;
-	left: 55%;
-	top: 100%;
-	padding: 5%;
-	z-index: 1
+width: 30%;
+
 }
 
 #porteouverte {
-	width: 25%;
-	display:block;
-	position:absolute;
-	left: 18%;
-	top:55%;
-	padding: 5%;
-	z-index: 4
+width: 30%;
 }
 
 #hommage {
-	width: 25%;
-	display:block;
-	position:absolute;
-	left: 48%;
-	top: 75%;
-	padding: 5%;
-	z-index: 6
+width: 80%;
 }
 
 #jjdress {
-	width: 7%;
-	display:block;
-	position:absolute;
-	left: 30%;
-	top: 60%;
-	padding: 5%;
-	z-index: 8
+width: 5%;
 }
 
 #piscine {
-	width: 25%;
-	display:block;
-	position:absolute;
-	left: 45%;
-	top: 28%;
-	padding: 5%;
-	z-index: 10
+width: 30%;
 }
 
 #hirondelle {
-	width: 30%;
-	display:block;
-	position:absolute;
-	padding: 5%;
-	z-index: 12
+width: 30%;
 }
 
 #cafe {
-	width: 20%;
-	display: block;
-	position: absolute;
-	padding-top: 40%;
-	z-index: 2;
-	}
+width: 30%;
+}
+
+#calembour {
+width: 30%;
+}
+
+/** #cartevoeux {
+width: 30%;
+padding-left: 20%;
+padding-top: 20%;
+z-index: 1;
+}
+
+#porteouverte {
+width: 30%;
+padding-left: 20%;
+padding-top: 20%;
+z-index: 2;
+}
+
+#hommage {
+width: 30%;
+left: 48%;
+top: 75%;
+padding: 5%;
+z-index: 3;
+}
+
+#jjdress {
+width: 30%;
+left: 30%;
+top: 60%;
+padding: 5%;
+z-index:4;
+}
+
+#piscine {
+width: 30%;
+left: 45%;
+top: 28%;
+padding: 5%;
+z-index: 5;
+}
+
+#hirondelle {
+width: 30%;
+z-index: 6;
+padding-left: 20%;
+}
+
+#cafe {
+width: 30%;
+z-index: 7;
+}
+
+#calembour {
+width: 30%;
+z-index: 8;
+} **/
+
 
 /** fin page d'accueil **/
 
@@ -158,7 +176,6 @@ ul li a:hover {
 
 /** toutes les pages **/
 
-	
 .galerie {
 	width: 50%;
 	margin: 0;
@@ -166,24 +183,23 @@ ul li a:hover {
 }
 
 .galerie img {
-	width: 80%;
+	width: 60%;
 	margin-bottom: 4%;
-	padding-top: 5%;
+	padding-top: 2%;
 }
-	
+
 .descriptif {
-	width: 35%;
-	float: left;
-	margin: 0;
- 	padding-right: 5%;
- 	padding-top: 20%;
-}	
+	position: fixed;
+	width: 100%;
+ 	padding-left: 40%;
+ 	padding-top: 5%;
+}
 
 .home {
 	width: 10%;
 	float: left;
 	margin: 0;
-	padding-top: 5%;
+	padding-top: 30%;
 }
 
 .footer {
@@ -197,13 +213,12 @@ ul li a:hover {
 
 
 
-	
 /** images cv **/
 
 #me {
-	width: 40%;
-	padding-left: 2%;
-	padding-top: 2%;}
+width: 40%;
+padding-left: 2%;
+padding-top: 2%;}
 
 /** liens **/
 
@@ -215,7 +230,6 @@ a {
 a:hover {
  	color: red;
 }
-
 
 
 
