--- a/style.css
+++ b/style.css
@@ -1,48 +1,46 @@
 html { 
-margin:0; 
-padding:0;
-box-sizing: border-box;
+	margin:0; 
+	padding:0;
+	box-sizing: border-box;
 }
-*, *:before, *:after {
-box-sizing: inherit;
+	*, *:before, *:after {
+	box-sizing: inherit;
 }
 
 
 body {
-font-family: 'Athiti', sans-serif;
-font-size: 12pt;
-width: 100%;
+	font-family: 'Athiti', sans-serif;
+	font-size: 12pt;
+	width: 1200px;
 }
 
 #global {
-width: 80%;
-margin: 0 auto;
+	width: 80%;
+	margin: 0 auto;
 }
 
 h1 {
-font-size: 15pt;
+	font-size: 15pt;
 }
 
 h2 {
-color: blue;
-font-size: 12pt;
-margin: 0;
+	color: blue;
+	font-size: 12pt;
+	margin: 0;
 }
-
-
 
 /** page d'accueil **/
 
 header {
-width: 100%;
-float: left;
-padding-left: 5%;
+	width: 100%;
+	float: left;
+	padding-left: 5%;
 }
 
 .nav {
-width: 100%;
-margin:0 auto;
-height: 20%;
+	width: 100%;
+	margin:0 auto;
+	height: 20%;
 }
 
 
@@ -51,121 +49,131 @@ ul {
     list-style-type: none;
     margin: 0;
     position: fixed;
-    padding-top: 2%;  
+    padding-top: 2%;
+    z-index: 1;  
 }
 
 li {
     display: inline;
     margin-right: 1%;
-margin-left: 1%;
+	margin-left: 1%;
 }
 
 li a:hover {
-color: blue;
+	color: blue;
 }
 
 
 .contenuindex {
-width: 100%;
-height: 2000px;
-background-color: pink;
-padding-top: 5%;
+	width: 100%;
+	height: 2000px;
+	padding-top: 5%;
 }
 
 .opacite {
-opacity: 1; filter: alpha(opacity=100);
+	opacity: 1; filter: alpha(opacity=100);
 }
 
 .opacite:hover {
-opacity: 0.7; filter: alpha(opacity=30);
+	opacity: 0.7; filter: alpha(opacity=30);
 }
 
-#cartevoeux {
-width: 30%;
+#draggable1 { /** hirondelle **/
+	left: 6%;
+	top: 10%;	
+	display: block;
+	z-index: 2;
+}
 
+#draggable2 { /** jjdress **/
+	left: 30%;
+	top: 60%;
+	display: block;
+	z-index: 3;
+}
+
+#draggable3 { /** hommage **/
+	left: 10%;
+	top: 10%;
+	display: block;
+	z-index: 4;
+}
+
+#draggable4 { /** piscine **/
+	left: 21%;
+	top: 31%;
+	display: block;
+	z-index: 5;
+}
+
+#draggable5 { /** cartevoeux **/
+	left: 80%;
+	top: 30%;
+	display: block;
+	z-index: 6;
+}
+
+#draggable6 { /** cafe **/
+	left: 20%;
+	top: 17%;
+	display: block;
+	z-index: 7;
+}
+
+#draggable7 { /** porteouverte **/
+	left: 10%;
+	top: 10%;
+	display: block;
+	z-index: 8;
+}
+
+#draggable8 { /** calembour **/
+	left: 80%;
+	top: 20%;
+	display: block;
+	z-index: 9;
+}
+
+
+#cartevoeux { 
+	width: 20%;
+	z-index: 9;
 }
 
 #porteouverte {
-width: 30%;
+	width: 20%;
+	z-index: 2;
 }
 
 #hommage {
-width: 80%;
+	width: 20%;
+	z-index: 3;
 }
 
 #jjdress {
-width: 5%;
+	width: 20%;
+	z-index:4;
 }
 
 #piscine {
-width: 30%;
+	width: 20%;
+	z-index: 5;
 }
 
 #hirondelle {
-width: 30%;
+	width: 20%;
+	z-index: 6;
 }
 
 #cafe {
-width: 30%;
+	width: 20%;
+	z-index: 7;
 }
 
 #calembour {
-width: 30%;
+	width: 20%;
+	z-index: 8;
 }
-
-/** #cartevoeux {
-width: 30%;
-padding-left: 20%;
-padding-top: 20%;
-z-index: 1;
-}
-
-#porteouverte {
-width: 30%;
-padding-left: 20%;
-padding-top: 20%;
-z-index: 2;
-}
-
-#hommage {
-width: 30%;
-left: 48%;
-top: 75%;
-padding: 5%;
-z-index: 3;
-}
-
-#jjdress {
-width: 30%;
-left: 30%;
-top: 60%;
-padding: 5%;
-z-index:4;
-}
-
-#piscine {
-width: 30%;
-left: 45%;
-top: 28%;
-padding: 5%;
-z-index: 5;
-}
-
-#hirondelle {
-width: 30%;
-z-index: 6;
-padding-left: 20%;
-}
-
-#cafe {
-width: 30%;
-z-index: 7;
-}
-
-#calembour {
-width: 30%;
-z-index: 8;
-} **/
 
 
 /** fin page d'accueil **/
@@ -200,6 +208,7 @@ z-index: 8;
 	float: left;
 	margin: 0;
 	padding-top: 30%;
+	padding-left: 30%;
 }
 
 .footer {
@@ -216,9 +225,10 @@ z-index: 8;
 /** images cv **/
 
 #me {
-width: 40%;
-padding-left: 2%;
-padding-top: 2%;}
+	width: 40%;
+	padding-left: 2%;
+	padding-top: 2%;
+}
 
 /** liens **/
 
