--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 #global {
-	width: 80%;
+	width: 1000px;
 	margin: 0 auto;
 }
 
@@ -32,20 +32,20 @@ h2 {
 /** page d'accueil **/
 
 header {
-	width: 100%;
+	width: 1000px;
 	float: left;
 	padding-left: 5%;
 }
 
 .nav {
-	width: 100%;
+	width: 1000px;
 	margin:0 auto;
 	height: 20%;
 }
 
 
 ul {
-	width: 100%;
+	width: 1000px;
     list-style-type: none;
     margin: 0;
     position: fixed;
@@ -78,63 +78,81 @@ li a:hover {
 	opacity: 0.7; filter: alpha(opacity=30);
 }
 
+.objet {
+	width: 30%;
+	display: block;
+}
+
+.objet img {
+	width: 100%;
+}
+
 #draggable1 { /** hirondelle **/
+/* 
 	left: 6%;
-	top: 10%;	
+	top: 10%;
+ */
+	top: 300px;
+	left: 400px;
 	display: block;
 	z-index: 2;
 }
 
 #draggable2 { /** jjdress **/
+/* 
 	left: 30%;
 	top: 60%;
+ */
+	top: 99px;
+	left: 190px;
 	display: block;
 	z-index: 3;
 }
 
 #draggable3 { /** hommage **/
-	left: 10%;
-	top: 10%;
+	top: 100px;
+	left: 400px;
 	display: block;
 	z-index: 4;
 }
 
 #draggable4 { /** piscine **/
-	left: 21%;
-	top: 31%;
+	top: 310px;
+	left: 410px;
 	display: block;
 	z-index: 5;
 }
 
 #draggable5 { /** cartevoeux **/
-	left: 80%;
-	top: 30%;
+	top: 320px;
+	left: 420px;
 	display: block;
 	z-index: 6;
 }
 
 #draggable6 { /** cafe **/
-	left: 20%;
-	top: 17%;
+	top: 200px;
+	left: 430px;
 	display: block;
 	z-index: 7;
 }
 
 #draggable7 { /** porteouverte **/
-	left: 10%;
-	top: 10%;
+	top: 350px;
+	left: 450px;
 	display: block;
 	z-index: 8;
 }
 
 #draggable8 { /** calembour **/
-	left: 80%;
-	top: 20%;
+	top: 300px;
+	left: 400px;
 	display: block;
 	z-index: 9;
 }
 
 
+/* 
 #cartevoeux { 
 	width: 20%;
 	z-index: 9;
@@ -174,6 +192,7 @@ li a:hover {
 	width: 20%;
 	z-index: 8;
 }
+ */
 
 
 /** fin page d'accueil **/
@@ -191,7 +210,7 @@ li a:hover {
 }
 
 .galerie img {
-	width: 60%;
+	width: 80%;
 	margin-bottom: 4%;
 	padding-top: 2%;
 }
@@ -209,6 +228,7 @@ li a:hover {
 	margin: 0;
 	padding-top: 30%;
 	padding-left: 30%;
+	color: blue;
 }
 
 .footer {
