--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@ html {
 body {
 	font-family: 'Athiti', sans-serif;
 	font-size: 12pt;
-	width: 1200px;
+	width: 100%;
 }
 
 #global {
-	width: 1000px;
-	margin: 0 auto;
+	margin-left: auto;
+  	margin-right: auto;
+  	width:	100%;
 }
 
 h1 {
@@ -32,13 +33,13 @@ h2 {
 /** page d'accueil **/
 
 header {
-	width: 1000px;
+	width: 100%;
 	float: left;
 	padding-left: 5%;
 }
 
 .nav {
-	width: 1000px;
+	width: 100%;
 	margin:0 auto;
 	height: 20%;
 }
@@ -63,12 +64,115 @@ li a:hover {
 	color: blue;
 }
 
+/* 
+.contenugalerie {
+	width: 100%
+}
 
 .contenuindex {
-	width: 100%;
-	height: 2000px;
-	padding-top: 5%;
+    background-color: red;
+    width: 40%;
+    float: left;
+    display: block;
 }
+
+
+.contenuindex2 {
+    float: left;
+    width: 40%;
+    background-color: pink;
+    
+}
+
+.contenuindex img {
+	width: 30%;
+}
+
+
+.contenuindex2 img {
+	width: 30%;
+}
+ */
+
+.contenugalerie {
+	height: 1600px;
+}
+
+
+#cartevoeux {
+width: 200px;
+position:absolute;
+left: 55%;
+top: 100%;
+z-index: 1;
+}
+
+#porteouverte {
+width: 200px;
+position:absolute;
+left: 10%;
+top: 40%;
+z-index: 8;
+}
+
+#hommage {
+width: 500px;
+display:block;
+position:absolute;
+left: 48%;
+top: 75%;
+z-index: 3;
+}
+
+#jjdress {
+width: 300px;
+display:block;
+position:absolute;
+left: 40%;
+top: 60%;
+z-index: 4;
+}
+
+#piscine {
+width: 350px;
+display:block;
+position:absolute;
+left: 45%;
+top: 28%;
+z-index: 5;
+}
+
+#hirondelle {
+width: 200px;
+display:block;
+position:absolute;
+top: 30%;
+left: 25%;
+z-index: 6;
+}
+
+#cafe {
+width: 350px;
+display: block;
+position: absolute;
+top: 70%;
+left: 20%;
+z-index: 7;
+}
+
+#calembour {
+width: 400px;
+display: block;
+position: absolute;
+top: 120%;
+left: 30%;
+z-index: 8;
+}
+
+
+
+
+
 
 .opacite {
 	opacity: 1; filter: alpha(opacity=100);
@@ -78,78 +182,17 @@ li a:hover {
 	opacity: 0.7; filter: alpha(opacity=30);
 }
 
-.objet {
+/** .objet {
 	width: 30%;
 	display: block;
+	background-color: pink;
 }
 
 .objet img {
 	width: 100%;
-}
+	padding-left: 40%;
 
-#draggable1 { /** hirondelle **/
-/* 
-	left: 6%;
-	top: 10%;
- */
-	top: 300px;
-	left: 400px;
-	display: block;
-	z-index: 2;
-}
-
-#draggable2 { /** jjdress **/
-/* 
-	left: 30%;
-	top: 60%;
- */
-	top: 99px;
-	left: 190px;
-	display: block;
-	z-index: 3;
-}
-
-#draggable3 { /** hommage **/
-	top: 100px;
-	left: 400px;
-	display: block;
-	z-index: 4;
-}
-
-#draggable4 { /** piscine **/
-	top: 310px;
-	left: 410px;
-	display: block;
-	z-index: 5;
-}
-
-#draggable5 { /** cartevoeux **/
-	top: 320px;
-	left: 420px;
-	display: block;
-	z-index: 6;
-}
-
-#draggable6 { /** cafe **/
-	top: 200px;
-	left: 430px;
-	display: block;
-	z-index: 7;
-}
-
-#draggable7 { /** porteouverte **/
-	top: 350px;
-	left: 450px;
-	display: block;
-	z-index: 8;
-}
-
-#draggable8 { /** calembour **/
-	top: 300px;
-	left: 400px;
-	display: block;
-	z-index: 9;
-}
+} **/
 
 
 /* 
@@ -205,20 +248,29 @@ li a:hover {
 
 .galerie {
 	width: 50%;
-	margin: 0;
+	padding-left: 5%;
 	float: left;
+/* background-color: blue; */
+
 }
 
 .galerie img {
 	width: 80%;
 	margin-bottom: 4%;
-	padding-top: 2%;
+	padding-top: 10%;
+/* 	background-color: green; */
+
 }
 
 .descriptif {
 	position: fixed;
-	width: 100%;
- 	padding-left: 40%;
+ 	padding-left: 50%;
+ 	padding-top: 5%;
+}
+
+.descriptifme {
+	position: fixed;
+ 	padding-left: 50%;
  	padding-top: 5%;
 }
 
@@ -236,6 +288,7 @@ li a:hover {
 	float: left;
 	bottom: 0;
 	font-size: 10px;
+	display: block;
 }
 
 /** fin toutes les pages **/
