--- a/style.css
+++ b/style.css
@@ -37,25 +37,27 @@ h2 {
 
 /** page d'accueil **/
 
-header {
-	width: 100%;
-	float: left;
-	padding-left: 5%;
-}
 
 .nav {
 	width: 100%;
 	margin:0 auto;
-	height: 1400px;
 	padding-left: 3%;
 	display: block;
 	
 }
 
-.galerieindex {
+.galerienav {
 	width: 100%;
 }
 
+.galerienav img {
+	width: 40%;
+	margin-left: 25%;
+	margin-right: 20%;
+	padding: 2%;
+	padding-top: 15%;
+	
+}
 
 ul {
 	width: 1000px;
@@ -77,81 +79,6 @@ li a:hover {
 }
 
 
-#cartevoeux {
-	width: 230px;
-	position:absolute;
-	left: 57%;
-	top: 110%;
-	z-index: 1;
-}
-
-#porteouverte {
-	width: 200px;
-	position:absolute;
-	left: 10%;
-	top: 40%;
-	z-index: 8;
-}
-
-#hommage {
-	width: 300px;
-	display:block;
-	position:absolute;
-	left: 70%;
-	top: 75%;
-	z-index: 3;
-}
-
-#jjdress {
-	width: 200px;
-	display:block;
-	position:absolute;
-	left: 40%;
-	top: 150%;
-	z-index: 4;
-}
-
-#piscine {
-	width: 350px;
-	display:block;
-	position:absolute;
-	left: 50%;
-	top: 28%;
-	z-index: 5;
-}
-
-#hirondelle {
-	width: 200px;
-	display:block;
-	position:absolute;
-	top: 30%;
-	left: 30%;
-	z-index: 6;
-}
-
-#cafe {
-	width: 350px;
-	display: block;
-	position: absolute;
-	top: 70%;
-	left: 20%;
-	z-index: 7;
-}
-
-#calembour {
-	width: 300px;
-	display: block;
-	position: absolute;
-	top: 140%;
-	left: 15%;
-	z-index: 8;
-}
-
-
-
-
-
-
 .opacite {
 	opacity: 1; filter: alpha(opacity=100);
 }
@@ -161,21 +88,15 @@ li a:hover {
 }
 
 
-
-
 /** fin page d'accueil **/
-
-
-
 
 
 /** toutes les pages **/
 
 .galerie {
-	width: 40%;
+	width: 50%;
 	padding-left: 5%;
 	float: left;
-/* background-color: blue; */
 
 }
 
@@ -183,7 +104,6 @@ li a:hover {
 	width: 80%;
 	margin-bottom: 4%;
 	padding-top: 10%;
-/* 	background-color: green; */
 
 }
 
@@ -243,11 +163,6 @@ a:hover {
 
 @media screen and (max-width: 640px) {
 
-.nav {
-	width: 50px;
-	float: left;
-}
-
 #global {
       float: none;
       width: auto;
@@ -286,45 +201,7 @@ float: left;
 	padding: 5%;
 	padding-top: 10%;}
 
-#cartevoeux {
-	width: 50px;
-	float: left;
-}
 
-#porteouverte {
-		width: 50px;
-
-}
-
-#hommage {
-	width: 50px;
-
-}
-
-#jjdress {
-	width: 50px;
-
-}
-
-#piscine {
-	width: 50px;
-
-}
-
-#hirondelle {
-	width: 50px;
-
-}
-
-#cafe {
-	width: 50px;
-
-}
-
-#calembour {
-	width: 50px;
-
-}
 
 }
 
