--- a/style.css
+++ b/style.css
@@ -85,7 +85,6 @@ li a:hover {
 
 .galerie {
 	width: 50%;
-	padding-left: 5%;
 	float: left;
 
 }
@@ -159,10 +158,22 @@ a:hover {
 
 @media screen and (max-width: 640px) {
 
+html {
+	width: 100%;
+}
+
+
+body {
+	width: 100%;
+}
+
 #global {
-      float: none;
-      width: auto;
-   }
+    width: 100%;
+}
+
+.nav {
+	width: 100%;
+}
    
 .galerie {
    width: 100%;
@@ -183,7 +194,7 @@ a:hover {
 	float: left;
 	margin: 0 auto;
 	padding: 5%;
-	}
+}
 
 .footer {
 	float: left;
@@ -193,13 +204,10 @@ a:hover {
 
 .galerienav {	
 	width: 100%;
-/* 
-	background-color: green;
- */
 }
 
 .galerienav img {
-	width: 80%;
+	width: 90%;
 	margin-left: 10%;
 	margin-right: 10%;
 	padding-top: 30%;
