--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ background-image:url(img/fond.jpg);
 	margin:0 auto;
 	padding-left: 3%;
 	display: block;
-	
 }
 
 ul {
@@ -43,6 +42,7 @@ ul {
     position: fixed;
     padding-top: 2%;
     z-index: 1;  
+    padding: 0;
 }
 
 li {
@@ -63,8 +63,6 @@ li a:hover {
 
 .galerienav img {
 	width: 35%;
-	margin-left: 28%;
-	margin-right: 20%;
 	padding: 2%;
 	padding-top: 15%;	
 }
@@ -208,8 +206,6 @@ body {
 
 .galerienav img {
 	width: 90%;
-	margin-left: 10%;
-	margin-right: 10%;
 	padding-top: 30%;
 }
 
@@ -217,8 +213,12 @@ body {
 li {
 	font-size: 70%;
 	margin: 0 auto;
-	}
+}
 
+
+ul { 
+    padding: 0;
+}
 
 
 }
