--- a/style.css
+++ b/style.css
@@ -11,28 +11,23 @@ body {
 	font-family: 'Miriam Libre', sans-serif;
 	font-size: 12pt;
 	width: 100%;
-
+	margin: 0 auto;
 }
+
 
 #global {
-	margin-left: auto;
-  	margin-right: auto;
-  	width:	100%;
-  	/* 
-background-image:url(img/fond.jpg);
-	background-position:center center;
- */
-
+	width: 100%;
+	margin: 0 auto;
 }
+
 
 /** page d'accueil **/
 
 
 .nav {
 	width: 100%;
-	margin:0 auto;
-	padding-left: 3%;
-	display: block;
+	margin: 0 auto;
+	padding: 5%;
 }
 
 ul {
@@ -40,14 +35,12 @@ ul {
     list-style-type: none;
     margin: 0;
     position: fixed;
-    padding-top: 2%;
     z-index: 1;  
-    padding: 0;
 }
 
 li {
     display: inline;
-    margin-right: 1%;
+    margin-right: 2%;
 	margin-left: 1%;
 	font-size: 25px;
 }
@@ -58,22 +51,25 @@ li a:hover {
 
 
 .galerienav {
-	width: 100%;
+	width: 30%;
+	margin: 0 auto;
 }
 
 .galerienav img {
-	width: 35%;
-	padding: 2%;
-	padding-top: 15%;	
+	width: 100%;
+	padding-bottom: 10%;
+	padding-top: 2%;
+	padding-left: 5%;
 }
 
-.opacite {
+#opacite {
 	opacity: 1; filter: alpha(opacity=100);
 }
 
-.opacite:hover {
+#opacite:hover {
 	opacity: 0.7; filter: alpha(opacity=30);
 }
+
 
 
 /** fin page d'accueil **/
@@ -84,30 +80,27 @@ li a:hover {
 .galerie {
 	width: 50%;
 	float: left;
-
 }
 
 .galerie img {
-	width: 80%;
-	margin-bottom: 4%;
-	padding-top: 10%;
-
+	width: 70%;
+	padding: 10%;
 }
 
 .descriptif {
  	padding-left: 50%;
  	padding-top: 5%;
- 	width: 25%; 	
+ 	width: 20%; 	
+ 	position: fixed;
 }
 
 
 .home {
 	width: 10%;
-	float: left;
 	margin: 0;
+	position: fixed;
+	padding-left: 80%;
 	padding-top: 30%;
-	padding-left: 30%;
-	display: block;
 }
 
 .footer {
@@ -116,6 +109,7 @@ li a:hover {
 	bottom: 0;
 	font-size: 10px;
 	display: block;
+	padding-left: 2%;
 }
 
 /** fin toutes les pages **/
@@ -124,20 +118,34 @@ li a:hover {
 
 /** about **/
 
-.pabout1 {
+.galerieabout {
+	width: 50%;
+	float: left;
+	padding-left: 5%;
+	padding-top: 2%;
+}
+
+.galerieabout2 {
+	width: 20%;
+	float: left;
+	padding-left: 14%;
+	padding-top: 2%;
+}
+
+#pabout1 {
 	font-size: 35px;
 }
 
-.pabout2 {
+#pabout2 {	
 	font-size: 25px;
 	padding-bottom: 5%;
 }
 
+
 #me {
-	width: 10%;
-	padding-top: 3%;
-	padding-left: 23%;
+	width: 70%;
 }
+
 
 
 /** liens **/
@@ -156,17 +164,8 @@ a:hover {
 
 @media screen and (max-width: 640px) {
 
-html {
-	width: 100%;
-}
-
-
 body {
 	width: 100%;
-}
-
-#global {
-    width: 100%;
 }
 
 .nav {
@@ -202,16 +201,18 @@ body {
 
 .galerienav {	
 	width: 100%;
+	padding-top: 10%;
 }
 
 .galerienav img {
-	width: 90%;
-	padding-top: 30%;
+	width: 80%;
+	margin: 0 auto;
+	padding-left: 10%;
 }
 
 
 li {
-	font-size: 70%;
+	font-size: 100%;
 	margin: 0 auto;
 }
 
