--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body {
 .nav {
 	width: 100%;
 	margin: 0 auto;
-	padding: 5%;
 }
 
 ul {
@@ -42,17 +41,21 @@ li {
     display: inline;
     margin-right: 2%;
 	margin-left: 1%;
-	font-size: 25px;
+	font-size: 20px;
 }
 
 li a:hover {
 	color: blue;
 }
 
+h1 {
+	font-size: 25px;
+}
 
 .galerienav {
 	width: 30%;
 	margin: 0 auto;
+	padding-top: 12%;
 }
 
 .galerienav img {
@@ -62,11 +65,11 @@ li a:hover {
 	padding-left: 5%;
 }
 
-#opacite {
+.opacite {
 	opacity: 1; filter: alpha(opacity=100);
 }
 
-#opacite:hover {
+.opacite:hover {
 	opacity: 0.7; filter: alpha(opacity=30);
 }
 
@@ -76,6 +79,11 @@ li a:hover {
 
 
 /** toutes les pages **/
+
+
+
+h2 {
+	font-size: 20px;}
 
 .galerie {
 	width: 50%;
@@ -92,6 +100,7 @@ li a:hover {
  	padding-top: 5%;
  	width: 20%; 	
  	position: fixed;
+
 }
 
 
@@ -109,7 +118,7 @@ li a:hover {
 	bottom: 0;
 	font-size: 10px;
 	display: block;
-	padding-left: 2%;
+	padding-left: 6%;
 }
 
 /** fin toutes les pages **/
@@ -146,6 +155,9 @@ li a:hover {
 	width: 70%;
 }
 
+h3 {
+	font-size: 20px;
+}
 
 
 /** liens **/
@@ -170,10 +182,11 @@ body {
 
 .nav {
 	width: 100%;
+	padding-left: 5%;
 }
    
 .galerie {
-   width: 100%;
+   width: 90%;
 }
 
 .galerie img {
@@ -183,25 +196,24 @@ body {
 .descriptif {
 	float: left;
 	width: 80%;
-	padding: 5%;
-	padding-top: 10%;
+	padding-left: 10%;
+	position: relative;
 }
 
 .home {
-	float: left;
-	margin: 0 auto;
-	padding: 5%;
+	position: relative;
 }
 
 .footer {
 	float: left;
 	margin: 0 auto;
-	padding: 5%;
+	padding-left: 10%;
+	padding-top: 20%;
 }
 
 .galerienav {	
 	width: 100%;
-	padding-top: 10%;
+	padding-top: 30%;
 }
 
 .galerienav img {
@@ -214,11 +226,29 @@ body {
 li {
 	font-size: 100%;
 	margin: 0 auto;
+	margin-right: 2%;
+	margin-left: 1%;
 }
 
 
 ul { 
     padding: 0;
+}
+
+
+.galerieabout {
+	width: 100%;
+	float: left;
+	padding-left: 5%;
+	padding-top: 2%;
+}
+
+.galerieabout2 {
+	position: fixed;
+	padding-left: 60%;
+	width: 50%;
+	padding-top: 7%;
+
 }
 
 
