--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ h1 {
 
 
 h2 {
-	font-size: 20px;}
+	font-size: 18px;}
 
 .galerie {
 	width: 50%;
@@ -103,6 +103,7 @@ h2 {
 
 }
 
+/* 
 
 .home {
 	width: 10%;
@@ -111,6 +112,7 @@ h2 {
 	padding-left: 80%;
 	padding-top: 30%;
 }
+ */
 
 .footer {
 	width: 100%;
@@ -203,6 +205,7 @@ body {
 	position: relative;
 }
 
+/* 
 .home {
 	position: relative;
 	width: 10%;
@@ -210,6 +213,7 @@ body {
 	padding-left: 70%;
 	padding-top: 0;
 }
+ */
 
 .footer {
 	float: left;
