--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ h1 {
 .galerienav {
 	width: 30%;
 	margin: 0 auto;
-	padding-top: 12%;
+	padding-top: 20%;
 }
 
 .galerienav img {
@@ -124,6 +124,10 @@ h2 {
 	box-sizing: border-box;
 	padding-left: 6%;
 }
+
+.galerietrucs img {
+	width: 90%;
+	margin: 0 auto;}
 
 /** fin toutes les pages **/
 
